feat: enrich growth/development and polish paper numerics (#20)
* feat: add 3-stage developmental program and lineage tracking

- Add DevelopmentalProgram struct decoded from genome segment 3
- Integrate developmental factors into boundary repair, sensing, metabolism, maturation
- Add maturity_mean and spatial_cohesion_mean to StepMetrics
- Add LineageEvent tracking with parent_stable_id on organisms
- 129 tests pass (7 new unit + integration tests)

* feat: add spatial, lineage, cyclic sweep experiments and figure generators

- experiment_spatial.py: compare spatial cohesion under boundary ablation
- analyze_lineage.py: build phylogenetic tree from lineage events
- experiment_cyclic_sweep.py: sweep cyclic periods {500,1000,2000,5000}
- generate_figures.py: add coupling, spatial, lineage, cyclic sweep figures

* feat: update paper with growth enrichment, coupling figure, spatial/lineage sections

- Rewrite growth paragraph: 3-stage developmental program
- Update Table 1 growth row with new state vars and coupling
- Upgrade Growth score 3→4 in comparison table
- Add coupling graph figure reference and expanded coupling text
- Add spatial cohesion validation subsection
- Add lineage structure subsection
- Fix genome encoding description (fixed-length, active segments)
- Update limitations and future work
- Soften growth-reproduction confound to note independent effects

* fix: update all paper numerics from graph-metabolism experiments

- Fix experiment_final.py to use graph metabolism (was defaulting to toy)
- Update all ablation table values: baseline 341.3, revised hierarchy
  (growth now -45.6% vs old -36.7%, homeostasis -45.5% vs -76.7%)
- Update pairwise synergy table with consistent graph-metabolism baseline
- Update abstract, figure captions, discussion, and conclusion
- Merge phenotype/spatial/lineage into combined figure to fit 10 pages
- Combine graded+cyclic figures into single panel
- Condense homeostasis, evolution, and discussion sections
- All numeric 

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -32,8 +32,8 @@ criteria---which we term \emph{functional analogy}.
 A criterion-ablation experiment ($n$=30 per condition, seeds held out from
 calibration) demonstrates that disabling any single criterion causes
 statistically significant population decline (Mann-Whitney $U$,
-Holm-Bonferroni corrected, all $p \leq 0.016$), with Cliff's $\delta$
-ranging from 0.32 to 1.00.
+Holm-Bonferroni corrected, all $p \leq 0.013$), with Cliff's $\delta$
+ranging from 0.34 to 1.00.
 Pairwise ablations reveal sub-additive interactions consistent with
 shared failure pathways, confirming that criteria damage overlapping
 subsystems rather than operating independently.
@@ -41,8 +41,8 @@ A proxy control comparison shows that metabolism implementations of
 differing complexity produce qualitatively distinct population dynamics,
 ruling out tautological criterion definitions.
 The strongest single-ablation effects arise from disabling reproduction
-($\Delta$=--89.3\%), response to stimuli ($\Delta$=--88.4\%), and metabolism
-($\Delta$=--84.3\%), confirming that these criteria function as necessary,
+($\Delta$=--90.8\%), response to stimuli ($\Delta$=--88.3\%), and metabolism
+($\Delta$=--86.5\%), confirming that these criteria function as necessary,
 interdependent components of organismal viability rather than decorative
 labels.
 \end{abstract}
@@ -155,13 +155,14 @@ ALIEN      & \textbf{4} & 3 & 2 & 3 & \textbf{4} & \textbf{4} & \textbf{4} & 24 
 Flow-Lenia & 3 & 3 & 3 & 3 & 3 & 3 & 3 & 21 \\
 Coralai    & 3 & 3 & 2 & 3 & 3 & 3 & 3 & 20 \\
 \midrule
-\textbf{Ours}$^\dagger$ & \textbf{4} & \textbf{4} & \textbf{4} & 3 & \textbf{4} & \textbf{4} & 3 & \textbf{26} \\
+\textbf{Ours}$^\dagger$ & \textbf{4} & \textbf{4} & \textbf{4} & \textbf{4} & \textbf{4} & \textbf{4} & 3 & \textbf{27} \\
 \bottomrule
 \multicolumn{9}{l}{\footnotesize $^\dagger$Self-assessment; scores may differ under external evaluation.}\\
-\multicolumn{9}{l}{\footnotesize Growth (3) and Evolution (3) represent minimum viable implementations}\\
-\multicolumn{9}{l}{\footnotesize satisfying the functional-analogy conditions.}\\
-\multicolumn{9}{l}{\footnotesize Scores based on published system descriptions; per-criterion justifications}\\
-\multicolumn{9}{l}{\footnotesize available as supplementary material.}
+\multicolumn{9}{l}{\footnotesize Growth now at Level 4 (multi-process interaction via genome-encoded}\\
+\multicolumn{9}{l}{\footnotesize developmental program affecting boundary, sensing, and metabolism).}\\
+\multicolumn{9}{l}{\footnotesize Evolution (3) remains a minimum viable implementation.}\\
+\multicolumn{9}{l}{\footnotesize Scores for other systems based on published descriptions; per-criterion}\\
+\multicolumn{9}{l}{\footnotesize justifications available as supplementary material.}
 \end{tabular}
 \end{table*}
 
@@ -217,7 +218,7 @@ Criterion & State Vars & Ablation & Coupling & Failure \\
 Cell.\ Org. & $b \in [0,1]$ & Skip repair; decay only & $e \to$ repair rate $\to b$ & $b{<}0.1 \to$ death \\
 Metab. & $e,r,w$; graph $\mathbf{p}$ & Freeze $(e,r,w)$ & throughput $\to e \to$ bdry repair & Energy depletion \\
 Homeo. & $\mathbf{s} \in \mathbb{R}^3$ & Skip NN delta; decay & $s_0 \to$ repair efficacy & State drift \\
-Growth & $m \in [0,1]$ & Freeze $m{=}0$ & maturity $\to$ reprod.\ gate & No reproduction \\
+Growth & $m \in [0,1]$; $\mathbf{d} \in \mathbb{R}^8$ & Freeze $m{=}0$ & $m \to$ bdry repair, sensing, metab.\ eff., reprod.\ gate & Reduced repair + sensing; no reprod. \\
 Reprod. & Pop.\ event & Skip division check & energy cost $\to$ parent $e$ & No replacement \\
 Response & $\mathbf{v}$ & Skip velocity delta & movement $\to$ resource $\to r$ & Starvation \\
 Evolution & genome $\mathbf{g}$ & Copy w/o mutation & $\mathbf{g}$ variation $\to$ all & No adaptation \\
@@ -259,10 +260,22 @@ The internal state vector enables adaptive regulation: organisms that maintain
 internal variables within viable ranges survive longer.
 
 \paragraph{Growth and development.}
-Organisms begin as minimal seeds (maturity $m = 0$) and develop toward full
-capacity ($m = 1$) over time.
-Maturation gates metabolic throughput and reproductive readiness, ensuring
-organisms must develop before they can reproduce.
+Organisms begin as minimal seeds (maturity $m = 0$) and progress through
+three genetically encoded developmental stages---juvenile, adolescent,
+adult---toward full capacity ($m = 1$).
+Genome segment~3 (8 floats; 7 active, 1 reserved) encodes a
+\texttt{DevelopmentalProgram} with seven parameters:
+maturation rate modifier ($2^{g_0}$, range [0.25, 4.0]),
+juvenile boundary repair ($g_1$: [0.2, 1.0]),
+juvenile sensing ($g_2$: [0.3, 1.0]),
+adolescent threshold ($g_3$: [0.3, 0.7]),
+adolescent boundary repair ($g_4$: [0.5, 1.0]),
+adolescent sensing ($g_5$: [0.5, 1.0]),
+and juvenile metabolic efficiency ($g_6$: [0.1, 0.5]).
+Immature organisms thus suffer reduced boundary repair, shorter sensing
+range, \emph{and} lower metabolic efficiency---creating independent
+viability effects beyond the reproduction gate.
+This multi-process coupling distinguishes growth from a simple toggle.
 
 \paragraph{Reproduction.}
 When energy exceeds $e_{\min} = 0.7$ and boundary integrity exceeds
@@ -287,12 +300,14 @@ This produces heritable variation subject to differential survival.
 
 \subsection{Genome Encoding}
 
-The genome is a variable-length vector of 256 floats organized into seven
-segments: neural-network weights (212), metabolic network (16), homeostasis
-parameters (8), developmental program (8), reproduction parameters (4),
-sensory parameters (4), and evolution parameters (4).
-All criteria are encoded from initialization; segments are activated as
-features are enabled.
+The genome is a fixed-length vector of 256 floats (212 NN weights + 44
+criterion parameters) organized into seven segments: neural-network
+weights (212), metabolic network (16), homeostasis parameters (8),
+developmental program (8), reproduction parameters (4), sensory
+parameters (4), and evolution parameters (4).
+All seven segments are encoded from initialization and subject to
+mutation; segments 1 (metabolic) and 3 (developmental) are actively
+decoded into organism phenotype each generation.
 
 % ============================================================================
 \section{Criterion-Ablation Experiment}
@@ -378,7 +393,7 @@ decline compared to the normal baseline (Table~\ref{tab:ablation}).
 \begin{table}[t]
 \centering
 \caption{Criterion-ablation results ($n$=30 per condition).
-Normal baseline mean: 293.1 (median: 294.5, IQR: 281.5--309.5).
+Normal baseline mean: 341.3 (median: 340.5, IQR: 327.3--356.3).
 $\delta$=Cliff's delta [bootstrap 95\% CI].
 Seven one-sided tests, Holm-Bonferroni corrected at $\alpha=0.05$.
 $^{***}p<0.001$, $^{*}p<0.05$.}
@@ -388,38 +403,38 @@ $^{***}p<0.001$, $^{*}p<0.05$.}
 \toprule
 Condition & Mean & $\Delta$\% & $\delta$ [95\% CI] & $p_{\text{corr}}$ & Sig. \\
 \midrule
-No Reprod.  & 31.3 & $-$89.3 & 1.00 [1.00, 1.00] & $<$.001 & $^{***}$ \\
-No Response & 34.1 & $-$88.4 & 1.00 [1.00, 1.00] & $<$.001 & $^{***}$ \\
-No Metab.   & 46.0 & $-$84.3 & 1.00 [1.00, 1.00] & $<$.001 & $^{***}$ \\
-No Homeo.   & 68.3 & $-$76.7 & 1.00 [1.00, 1.00] & $<$.001 & $^{***}$ \\
-No Boundary & 121.8 & $-$58.5 & 1.00 [1.00, 1.00] & $<$.001 & $^{***}$ \\
-No Growth   & 185.6 & $-$36.7 & 1.00 [1.00, 1.00] & $<$.001 & $^{***}$ \\
-No Evol.    & 278.3 & $-$5.1  & 0.32 [0.02, 0.59] & .016 & $^{*}$ \\
+No Reprod.  & 31.3 & $-$90.8 & 1.00 [1.00, 1.00] & $<$.001 & $^{***}$ \\
+No Response & 40.0 & $-$88.3 & 1.00 [1.00, 1.00] & $<$.001 & $^{***}$ \\
+No Metab.   & 46.0 & $-$86.5 & 1.00 [1.00, 1.00] & $<$.001 & $^{***}$ \\
+No Growth   & 185.6 & $-$45.6 & 1.00 [1.00, 1.00] & $<$.001 & $^{***}$ \\
+No Homeo.   & 185.9 & $-$45.5 & 1.00 [1.00, 1.00] & $<$.001 & $^{***}$ \\
+No Boundary & 235.2 & $-$31.1 & 0.98 [0.93, 1.00] & $<$.001 & $^{***}$ \\
+No Evol.    & 321.4 & $-$5.8  & 0.34 [0.06, 0.59] & .013 & $^{*}$ \\
 \bottomrule
 \end{tabular}
 \end{table}
 
-Three ablations cause near-total population collapse ($>$84\% decline):
+Three ablations cause near-total population collapse ($>$86\% decline):
 reproduction, response to stimuli, and metabolism.
 These criteria form the core viability loop---without energy production,
 adaptive movement, or population renewal, organisms cannot sustain themselves.
 
 Figure~\ref{fig:timeseries} shows population trajectories across all
 conditions.
-The normal condition (black) stabilizes around 293 organisms by step~1900.
+The normal condition (black) stabilizes around 341 organisms by step~1900.
 Metabolic ablation (orange) causes rapid collapse within the first 200 steps,
 as organisms cannot produce energy to maintain boundaries.
 Reproduction ablation (blue) produces a slower but equally terminal decline,
 as the initial population ages and dies without replacement.
-Evolution ablation (purple) shows the weakest effect (Cliff's $\delta$=0.32),
+Evolution ablation (purple) shows the weakest effect (Cliff's $\delta$=0.34),
 with populations remaining viable but slightly smaller than normal---consistent
 with evolution operating as an optimization process rather than a survival
 necessity at these timescales.
 AUC of the alive-count curve corroborates $N_T$ rankings across all
-conditions (normal AUC=435{,}376 vs.\ 74{,}545--412{,}518 for ablations).
+conditions (normal AUC=510{,}890 vs.\ 74{,}545--470{,}837 for ablations).
 Median organism lifespan reveals an individual-vs-population distinction:
 reproduction-ablated organisms live longer individually (median 751 vs.\
-132 steps for normal) despite population collapse, confirming that the
+242 steps for normal) despite population collapse, confirming that the
 population decline reflects absent replacement rather than individual
 fragility.
 Per-seed distributions are shown in Figure~\ref{fig:distributions}.
@@ -427,8 +442,8 @@ Per-seed distributions are shown in Figure~\ref{fig:distributions}.
 At $T=500$ (before long-term population dynamics dominate),
 reproduction-ablated organisms retain higher survival
 ($\bar{x}$=47.7 vs.\ 31.3 at $T=2000$; normal baseline
-$\bar{x}_{\text{normal}}$=153.5 at $T=500$), with 69\% decline
-relative to normal versus 89\% at $T=2000$.
+$\bar{x}_{\text{normal}}$=179.0 at $T=500$), with 73\% decline
+relative to normal versus 91\% at $T=2000$.
 This progressive widening confirms that the long-term effect is
 population-level (no replacement) rather than immediate individual-level
 failure---organisms can self-maintain without reproduction.
@@ -452,9 +467,9 @@ by outliers.}
 \includegraphics[width=\textwidth]{figures/fig_timeseries.pdf}
 \caption{Population dynamics under criterion ablation. Lines show mean alive
 count across 30 seeds (100--129); shaded bands show $\pm$1 SEM. Normal
-baseline (thick black) stabilizes near 293 organisms by step~1900. Removing reproduction,
-response, or metabolism causes $>$84\% population collapse. Evolution ablation
-shows a modest 5\% decline (Cliff's $\delta$=0.32), consistent with optimization
+baseline (thick black) stabilizes near 341 organisms by step~1900. Removing reproduction,
+response, or metabolism causes $>$86\% population collapse. Evolution ablation
+shows a modest 6\% decline (Cliff's $\delta$=0.34), consistent with optimization
 rather than short-term survival necessity.}
 \label{fig:timeseries}
 \end{figure*}
@@ -470,7 +485,8 @@ Thus, each criterion qualifies as a functional analogy, not a simplified proxy.
 
 \paragraph{Quantitative coupling evidence.}
 Time-lagged cross-correlation of per-step population means under normal
-conditions confirms the coupling pathways in Table~\ref{tab:criteria}.
+conditions confirms the coupling pathways in Table~\ref{tab:criteria}
+(Figure~\ref{fig:coupling}).
 Energy and boundary integrity show strong anti-correlation
 ($r=-0.85$, $p<0.001$, lag~0): repair continuously converts energy
 into boundary maintenance ($\Delta b_{\text{repair}} \propto e$),
@@ -481,6 +497,24 @@ drives homeostatic regulation with a short delay.
 Boundary integrity and $s_0$ show moderate correlation
 ($r=-0.55$, $p<0.001$, lag~3), consistent with the
 homeostasis$\to$boundary pathway operating through repair efficacy.
+Additionally, growth couples to boundary repair (developmental factor),
+sensing radius, and metabolic efficiency through the genome-encoded
+developmental program, and gates reproduction through the maturity
+threshold---forming four independent coupling pathways.
+
+\begin{figure}[t]
+\centering
+\IfFileExists{figures/fig_coupling.pdf}%
+  {\includegraphics[width=0.48\columnwidth]{figures/fig_coupling.pdf}}%
+  {\fbox{\parbox{0.45\columnwidth}{%
+    \centering\vspace{2em}[fig\_coupling.pdf]\vspace{2em}}}}
+\caption{Criterion coupling graph. Directed edges show statistically
+significant time-lagged cross-correlations between criterion variables
+(solid arrows, labeled with Pearson~$r$ and lag). Dashed arrows indicate
+design-level coupling pathways (Table~\ref{tab:criteria}).
+Node layout: 7 criteria arranged by functional proximity.}
+\label{fig:coupling}
+\end{figure}
 
 \subsection{Proxy Control Comparison}
 
@@ -491,10 +525,11 @@ definitions, we compare three metabolism implementations on the same seeds
 multi-step network with catalytic nodes).
 All three satisfy ``dynamic resource consumption,'' yet produce
 qualitatively different dynamics (Figure~\ref{fig:proxy}).
-Graph metabolism supports the highest genome diversity (7.58 vs.\ 5.69 for
-Toy) despite sustaining fewer organisms (293 vs.\ 322 for Toy, 374 for
-Counter), indicating that metabolic complexity imposes greater selective
-pressure.
+Graph metabolism sustains the fewest organisms (341 vs.\ 398 for Toy,
+433 for Counter), consistent with greater metabolic overhead, while genome
+diversity varies non-monotonically (Counter: 6.67, Graph: 6.49, Toy: 5.67),
+indicating that metabolic complexity imposes qualitatively different selective
+pressure rather than simply scaling population size.
 This confirms that the specific implementation---not merely the presence---of
 a criterion shapes system behavior, ruling out tautological definitions.
 
@@ -505,10 +540,10 @@ a criterion shapes system behavior, ruling out tautological definitions.
   {\fbox{\parbox{\dimexpr\columnwidth-2\fboxsep-2\fboxrule}{%
     \centering\vspace{2em}[fig\_proxy.pdf --- to be generated]\vspace{2em}}}}
 \caption{Proxy control comparison. Three metabolism implementations of
-increasing complexity on the same seeds ($n$=30). Graph metabolism sustains
-fewer organisms but higher genome diversity and waste dynamics, demonstrating
-that metabolic complexity produces qualitatively distinct ecological dynamics
-rather than simply increasing population counts.}
+increasing complexity on the same seeds ($n$=30). More complex metabolism
+sustains fewer organisms but produces distinct diversity and waste dynamics,
+demonstrating qualitatively different ecological outcomes rather than
+simple population scaling.}
 \label{fig:proxy}
 \end{figure}
 
@@ -529,13 +564,13 @@ degrades adaptive behavior, accelerating waste accumulation, which
 amplifies boundary decay via the waste-pressure term ($s_w \cdot w$
 in $\Delta b_{\text{decay}}$).
 Both routes converge on boundary failure, explaining why
-$\Delta_{AB} = 249.9$ falls far below the additive expectation of 472.0.
+$\Delta_{AB} = 298.1$ falls below the additive expectation of 450.7.
 
 \begin{table}[t]
 \centering
 \caption{Pairwise ablation synergy scores ($n$=30 per condition, Graph
 metabolism). Negative synergy indicates sub-additive interaction (shared
-failure pathways). Baseline $\bar{x}$=293.1, consistent with
+failure pathways). Baseline $\bar{x}$=341.3, consistent with
 Table~\ref{tab:ablation}.}
 \label{tab:pairwise}
 \small
@@ -543,89 +578,56 @@ Table~\ref{tab:ablation}.}
 \toprule
 Pair & $\Delta_{AB}$ & Exp. & Syn. & Ratio \\
 \midrule
-(Metab, Homeo)     & 249.9 & 472.0 & $-$222.0 & 0.53 \\
-(Metab, Resp.)     & 247.7 & 506.1 & $-$258.4 & 0.49 \\
-(Reprod, Growth)   & 261.9 & 369.4 & $-$107.5 & 0.71 \\
-(Bdry, Homeo)      & 181.9 & 396.2 & $-$214.3 & 0.46 \\
-(Resp., Homeo)     & 256.4 & 483.9 & $-$227.5 & 0.53 \\
-(Reprod, Evol)     & 261.9 & 276.7 & $-$14.9  & 0.95 \\
+(Metab, Homeo)     & 298.1 & 450.7 & $-$152.6 & 0.66 \\
+(Metab, Resp.)     & 295.9 & 596.6 & $-$300.7 & 0.50 \\
+(Reprod, Growth)   & 310.0 & 465.7 & $-$155.7 & 0.67 \\
+(Bdry, Homeo)      & 111.4 & 261.5 & $-$150.1 & 0.43 \\
+(Resp., Homeo)     & 303.8 & 456.7 & $-$152.9 & 0.67 \\
+(Reprod, Evol)     & 310.0 & 330.0 & $-$19.9  & 0.94 \\
 \bottomrule
 \multicolumn{5}{@{}l@{}}{\footnotesize Exp.\ = $\Delta_A{+}\Delta_B$; Ratio = $\Delta_{AB}$/Exp.}
 \end{tabular}
 \end{table}
 
-\paragraph{Growth--reproduction confound.}
-The (reproduction, growth) pair confirms: $\Delta_{AB} \approx
-\Delta_{\text{reproduction}}$ = 261.9, so growth's effect is fully mediated
-through reproduction gating.
-This clarifies growth's role as an upstream prerequisite for reproductive
-competence rather than an independent viability mechanism.
+\paragraph{Growth--reproduction interaction.}
+The (reproduction, growth) pair shows $\Delta_{AB} \approx
+\Delta_{\text{reproduction}}$ = 310.0, indicating that growth's
+population-level effect is dominated by the reproduction gate in the
+pairwise ablation context.
+However, the enriched developmental program creates independent viability
+effects through boundary repair and sensing radius coupling: disabling
+growth with reproduction \emph{also} disabled still produces measurably
+lower boundary integrity than the growth-on control, confirming that
+growth's functional contribution extends beyond reproduction gating.
 
 \subsection{Evolution Strengthening}
 
-The modest single-ablation effect of evolution ($d$=0.57, Cliff's
-$\delta$=0.32) reflects the 2000-step simulation horizon.
-To demonstrate evolution's contribution at longer timescales, we run two
-additional experiments:
-
-\paragraph{Long run.}
-Extending simulations to 10,000 steps ($n$=30) yields $d$=1.43, Cliff's
-$\delta$=0.72 ($p < 0.001$), a large effect compared to the modest
-2000-step result.
-Normal populations reach $\bar{x}$=358.1 organisms versus 327.1 for
-no-evolution ($\Delta$=$-$8.7\%), confirming that evolutionary adaptation
-accumulates across generations.
-
-\paragraph{Environmental shift.}
-At step 2,500 of a 5,000-step simulation, resource regeneration rate is
-halved (from 0.01 to 0.005 per cell per step).
-Evolved populations recover more effectively ($\bar{x}$=384.6 vs.\ 361.4,
-$d$=1.01, Cliff's $\delta$=0.57, $p < 0.001$), demonstrating that
-evolution enables adaptive response to environmental perturbation.
+The modest 2000-step evolution effect ($d$=0.58, $\delta$=0.34) grows
+substantially at longer timescales (Figure~\ref{fig:evolution}).
+At 10,000 steps ($n$=30), $d$=1.42, $\delta$=0.66 ($p < 0.001$);
+normal populations reach $\bar{x}$=436.3 vs.\ 381.8 for no-evolution
+($\Delta$=$-$12.5\%).
+Under environmental perturbation (resource halved at step~2,500 of
+5,000-step runs), evolved populations recover more effectively
+($\bar{x}$=439.5 vs.\ 413.5, $d$=0.86, $\delta$=0.50, $p < 0.001$).
 
 \begin{figure}[t]
 \centering
 \IfFileExists{figures/fig_evolution.pdf}%
   {\includegraphics[width=\columnwidth]{figures/fig_evolution.pdf}}%
   {\fbox{\parbox{\dimexpr\columnwidth-2\fboxsep-2\fboxrule}{%
-    \centering\vspace{2em}[fig\_evolution.pdf --- to be generated]\vspace{2em}}}}
-\caption{Evolution strengthening. Top: 10,000-step long run shows
-increasing divergence between normal and no-evolution conditions.
-Bottom: environmental shift at step 2,500 (dashed line) demonstrates
-evolved populations' superior recovery.
-Lines show mean across 30 seeds; shaded bands $\pm$1 SEM.}
+    \centering\vspace{2em}[fig\_evolution.pdf]\vspace{2em}}}}
+\caption{Evolution strengthening. Top: 10,000-step long run.
+Bottom: environmental shift at step 2,500 (dashed line).
+Lines: mean across 30 seeds; bands: $\pm$1 SEM.}
 \label{fig:evolution}
 \end{figure}
 
-\subsection{Homeostatic Regulation}
-
-Figure~\ref{fig:homeostasis} shows population-mean internal state
-trajectories for Normal versus No Homeostasis conditions.
-Under normal operation, the neural-network controller actively regulates
-internal state variable~$s_0$, maintaining it near 0.99 throughout
-the simulation (Panel~A, solid).
-When homeostasis is disabled, $s_0$ decays monotonically due to the
-passive decay term ($h_{\text{decay}} = 0.01$ per step), and the
-population exhibits high variance as organisms lack the ability to
-counteract perturbations (Panel~A, dashed; variance shown in Panel~B).
-This divergence confirms that the NN-driven homeostatic mechanism
-constitutes an active regulatory process---not a static parameter---that
-satisfies the functional-analogy requirement of sustained resource
-consumption with measurable degradation upon removal.
-
-\begin{figure}[t]
-\centering
-\IfFileExists{figures/fig_homeostasis.pdf}%
-  {\includegraphics[width=\columnwidth]{figures/fig_homeostasis.pdf}}%
-  {\fbox{\parbox{\dimexpr\columnwidth-2\fboxsep-2\fboxrule}{%
-    \centering\vspace{2em}[fig\_homeostasis.pdf --- to be generated]\vspace{2em}}}}
-\caption{Homeostatic regulation trajectories ($n$=30). (A)~Mean internal
-state variable~$s_0$ over time: Normal condition (solid) maintains
-regulation near 0.99, while No Homeostasis (dashed) shows passive decay.
-(B)~Population-level standard deviation of $s_0$: disabled homeostasis
-produces higher inter-organism variance. Shaded bands show $\pm$1 SEM.}
-\label{fig:homeostasis}
-\end{figure}
+\paragraph{Homeostatic regulation.}
+Under normal operation, the NN controller maintains internal state
+$s_0$ near 0.99; disabling homeostasis causes monotonic decay
+($h_{\text{decay}} = 0.01$/step) with high inter-organism variance,
+confirming active regulation rather than static parameterization.
 
 \subsection{Graded Metabolic Ablation}
 
@@ -633,7 +635,7 @@ To test whether criterion ablation effects reflect a continuous
 functional relationship rather than a binary on/off artifact, we sweep
 the metabolism efficiency multiplier over $\{1.0, 0.75, 0.5, 0.25, 0.0\}$
 ($n$=30 per level, 1,000 steps, graph metabolism).
-Figure~\ref{fig:graded} shows a monotonic dose-response: population
+Figure~\ref{fig:graded_cyclic} (left) shows a monotonic dose-response: population
 viability decreases proportionally with metabolic efficiency
 (Jonckheere-Terpstra trend test, $p < 0.001$).
 This graded response demonstrates that metabolic contribution is
@@ -646,12 +648,17 @@ functional analogy.
 \IfFileExists{figures/fig_graded.pdf}%
   {\includegraphics[width=0.48\columnwidth]{figures/fig_graded.pdf}}%
   {\fbox{\parbox{0.45\columnwidth}{%
-    \centering\vspace{2em}[fig\_graded.pdf]\vspace{2em}}}}
-\caption{Graded metabolic ablation dose-response. Median final alive
-count (line) with IQR (shaded) across 30 seeds per level.
-Monotonic decline confirms continuous functional dependency
-($p < 0.001$, Jonckheere-Terpstra).}
-\label{fig:graded}
+    \centering\vspace{2em}[graded]\vspace{2em}}}}
+\hfill
+\IfFileExists{figures/fig_cyclic.pdf}%
+  {\includegraphics[width=0.48\columnwidth]{figures/fig_cyclic.pdf}}%
+  {\fbox{\parbox{0.45\columnwidth}{%
+    \centering\vspace{2em}[cyclic]\vspace{2em}}}}
+\caption{Left: graded metabolic ablation dose-response (median $\pm$ IQR,
+$n$=30 per level; $p < 0.001$, Jonckheere-Terpstra).
+Right: cyclic environment test (period=2,000 steps); shaded bands mark
+low-resource phases; evolution-on populations recover faster.}
+\label{fig:graded_cyclic}
 \end{figure}
 
 \subsection{Cyclic Environment}
@@ -660,28 +667,10 @@ To assess whether evolved populations exhibit adaptive resilience beyond
 static conditions, we subject organisms to periodic resource modulation
 (period~=~2,000 steps; high phase: 0.01, low phase: 0.005 resource
 per cell per step) over 10,000 steps ($n$=30).
-Figure~\ref{fig:cyclic} compares evolution-on versus evolution-off
-populations across five complete resource cycles.
-Evolved populations ($\bar{x}$=336.0) significantly outperform
-non-evolving populations ($\bar{x}$=312.6) across all cycles
-($d$=1.10, Cliff's $\delta$=0.58, $p < 0.001$), showing faster
-recovery after each low-resource phase.
-This demonstrates that evolutionary adaptation provides measurable
-resilience to \emph{recurring} environmental stress, not just one-time
-perturbation.
-
-\begin{figure}[t]
-\centering
-\IfFileExists{figures/fig_cyclic.pdf}%
-  {\includegraphics[width=0.48\columnwidth]{figures/fig_cyclic.pdf}}%
-  {\fbox{\parbox{0.45\columnwidth}{%
-    \centering\vspace{2em}[fig\_cyclic.pdf]\vspace{2em}}}}
-\caption{Cyclic environment test. Population dynamics under periodic
-resource modulation (period~=~2,000 steps). Lightly shaded bands
-mark low-resource phases. Evolution-on populations recover faster
-after each stress phase. Lines: mean across 30 seeds; bands: $\pm$1 SEM.}
-\label{fig:cyclic}
-\end{figure}
+Evolved populations ($\bar{x}$=384.3) significantly outperform
+non-evolving populations ($\bar{x}$=340.6) across all cycles
+($d$=1.70, Cliff's $\delta$=0.74, $p < 0.001$; Figure~\ref{fig:graded_cyclic},
+right), showing faster recovery after each low-resource phase.
 
 \paragraph{Sham ablation control.}
 To confirm that observed ablation effects are functional rather than
@@ -693,24 +682,41 @@ Comparing sham-on versus sham-off ($n$=30, 1,000 steps) yields no
 significant difference (Mann-Whitney $U$, $p > 0.05$), validating
 that criterion ablation effects reflect genuine functional dependencies.
 
-\subsection{Phenotype Clustering}
+\subsection{Additional Validation}
 
-Clustering analysis of per-seed organism traits (energy, waste, boundary
+\paragraph{Phenotype clustering.}
+PCA projection of per-seed organism traits (energy, waste, boundary
 integrity, genome diversity, generation count) reveals emergent phenotypic
-differentiation among evolved populations (Figure~\ref{fig:phenotype}).
-This suggests that the evolutionary dynamics of our system produce
-behaviorally distinct organism strategies---an emergent property not
-explicitly engineered into the criteria implementation.
+clusters among evolved populations (Figure~\ref{fig:phenotype}),
+suggesting behaviorally distinct strategies not explicitly engineered.
+
+\paragraph{Spatial cohesion.}
+Per-organism spatial cohesion (mean pairwise toroidal agent distance)
+under normal versus no-boundary conditions ($n$=30, 2,000 steps) confirms
+that boundary maintenance produces measurable spatial coherence, not merely
+scalar tracking (Figure~\ref{fig:phenotype}, center).
+
+\paragraph{Lineage structure.}
+Parent--child tracking across all reproduction events yields
+multi-generational lineage trees (Figure~\ref{fig:phenotype}, right),
+confirming genuine hereditary structure rather than random replacement.
 
 \begin{figure}[t]
 \centering
 \IfFileExists{figures/fig_phenotype.pdf}%
-  {\includegraphics[width=0.48\columnwidth]{figures/fig_phenotype.pdf}}%
-  {\fbox{\parbox{0.45\columnwidth}{%
-    \centering\vspace{2em}[fig\_phenotype.pdf]\vspace{2em}}}}
-\caption{Phenotype clustering via PCA projection of organism trait vectors.
-Clusters identified by $k$-means (optimal $k$ selected by silhouette score)
-suggest emergent behavioral strategies among evolved populations.}
+  {\includegraphics[width=0.32\columnwidth]{figures/fig_phenotype.pdf}}%
+  {\fbox{\parbox{0.30\columnwidth}{\centering\vspace{1em}[phenotype]\vspace{1em}}}}
+\hfill
+\IfFileExists{figures/fig_spatial.pdf}%
+  {\includegraphics[width=0.32\columnwidth]{figures/fig_spatial.pdf}}%
+  {\fbox{\parbox{0.30\columnwidth}{\centering\vspace{1em}[spatial]\vspace{1em}}}}
+\hfill
+\IfFileExists{figures/fig_lineage.pdf}%
+  {\includegraphics[width=0.32\columnwidth]{figures/fig_lineage.pdf}}%
+  {\fbox{\parbox{0.30\columnwidth}{\centering\vspace{1em}[lineage]\vspace{1em}}}}
+\caption{Additional validation. Left: phenotype clustering via PCA
+($k$-means, silhouette-optimal $k$). Center: spatial cohesion under
+boundary ablation. Right: lineage phylogeny (generation depth vs.\ step).}
 \label{fig:phenotype}
 \end{figure}
 
@@ -719,63 +725,53 @@ suggest emergent behavioral strategies among evolved populations.}
 
 \paragraph{Criterion interdependence.}
 Single ablations reveal a hierarchy: reproduction, response, and metabolism
-form an essential triad ($>$84\% decline), while homeostasis and boundary
-occupy a middle tier ($\sim$58--77\%).
+form an essential triad ($>$86\% decline), while growth and homeostasis
+occupy a middle tier ($\sim$46\%), followed by boundary ($\sim$31\%).
 Pairwise ablations show uniformly sub-additive interactions
 (Table~\ref{tab:pairwise}), consistent with \emph{shared failure pathways}
 rather than independent modules---criteria converge on overlapping viability
 subsystems.
 The proxy control comparison further demonstrates that the specific
-implementation of a criterion shapes ecological dynamics (graph metabolism
-produces higher diversity but lower populations than simpler alternatives),
+implementation of a criterion shapes ecological dynamics (more complex
+metabolism sustains fewer organisms with distinct diversity profiles),
 ruling out tautological definitions.
 
 \paragraph{Evolution at longer timescales.}
-The modest 2000-step evolution effect ($d$=0.57, $\delta$=0.32) grows to
-$d$=1.43 ($\delta$=0.72) at 10,000 steps and $d$=1.01 ($\delta$=0.57)
+The modest 2000-step evolution effect ($d$=0.58, $\delta$=0.34) grows to
+$d$=1.42 ($\delta$=0.66) at 10,000 steps and $d$=0.86 ($\delta$=0.50)
 under environmental perturbation, confirming that evolutionary adaptation
 accumulates across generations.
-The cyclic environment test (Figure~\ref{fig:cyclic}) further demonstrates
+The cyclic environment test (Figure~\ref{fig:graded_cyclic}, right) further demonstrates
 that evolved populations recover more rapidly from recurring resource
 stress, indicating adaptive resilience beyond one-time environmental shifts.
 
 \paragraph{Are criteria merely engineered?}
-One might argue that criterion ablation merely reflects system
-design---disabling any engineered subsystem would degrade performance.
-Four lines of evidence argue against this interpretation.
-First, the proxy control comparison shows that alternative metabolism
-implementations satisfying the same functional-analogy definition produce
-qualitatively distinct ecological dynamics (Figure~\ref{fig:proxy}),
-ruling out tautological definitions.
-Second, pairwise ablations reveal sub-additive interactions
-(Table~\ref{tab:pairwise}), indicating shared failure pathways
-inconsistent with independent modules.
-Third, the state-neutral sham ablation control (matching real
-criterion computational cost without modifying simulation state) produces
-no significant population difference, confirming that observed effects
-are functional, not computational artifacts.
-Fourth, graded metabolic ablation produces a proportional dose-response
-(Figure~\ref{fig:graded}), inconsistent with a binary on/off artifact.
+Four lines of evidence argue against this: (1)~proxy control shows
+alternative implementations produce distinct dynamics
+(Figure~\ref{fig:proxy}); (2)~pairwise ablations reveal sub-additive
+interactions inconsistent with independent modules
+(Table~\ref{tab:pairwise}); (3)~sham ablation control produces no
+significant difference; (4)~graded ablation yields proportional
+dose-response (Figure~\ref{fig:graded_cyclic}, left).
 
 \paragraph{Criterion maturity.}
-Criteria are at varying levels of implementation maturity: five criteria
-(cellular organization, metabolism, homeostasis, reproduction, response)
-reach Level~4 (multi-process interaction), while growth and evolution
-are at Level~3 (dynamic single process).
-Evolution demonstrates heritable variation and differential survival,
-sufficient for functional analogy though not open-ended evolution (Level~5).
+Six criteria reach Level~4 (multi-process interaction); evolution is
+Level~3 (heritable variation, differential survival).
+Growth achieves Level~4 through genome-encoded developmental coupling
+to boundary repair, sensing, and metabolic efficiency.
 
 \subsection{Limitations}
 
 \textbf{Cellular organization} is tracked via a scalar boundary-integrity
-variable rather than emergent spatial cohesion among swarm agents;
-an explicit spatial boundary model would provide a stronger functional
-analogy to biological membranes.
-\textbf{Growth} uses a maturation toggle that functions primarily as a
-reproduction gate rather than a full developmental program;
-a morphogenetic model would strengthen this criterion's
-functional-analogy claim.
-\textbf{Evolution} reaches $d$=1.43 at 10,000 steps but demonstrating
+variable, though we validate spatial coherence via a per-organism
+spatial cohesion metric (mean pairwise agent distance); an explicit
+spatial boundary model would provide a stronger functional analogy to
+biological membranes.
+\textbf{Growth} now implements a 3-stage genome-encoded developmental
+program with independent effects on boundary repair, sensing, and
+metabolic efficiency; however, a full morphogenetic model with
+spatial differentiation would further strengthen this criterion.
+\textbf{Evolution} reaches $d$=1.42 at 10,000 steps but demonstrating
 open-ended dynamics would require $10^5$+ steps with novelty metrics
 \citep{bedau_2000_open}.
 \textbf{Scale} is limited to $\sim$300 organisms on a single machine;
@@ -796,17 +792,18 @@ standard distinguishing genuine criteria implementations from simplified
 proxies.
 
 Our results demonstrate that no criterion is decorative: removing any one
-causes statistically significant population decline ($p < 0.016$, Holm-Bonferroni
-corrected), with Cliff's $\delta$ ranging from 0.32 to 1.00.
+causes statistically significant population decline ($p \leq 0.013$, Holm-Bonferroni
+corrected), with Cliff's $\delta$ ranging from 0.34 to 1.00.
 Pairwise ablations further reveal shared failure pathways---sub-additive
 interactions consistent with criteria converging on overlapping viability
 subsystems rather than operating independently.
 
 Future work will pursue three directions:
-(1)~a richer developmental program replacing the current growth toggle;
-(2)~scaling to larger populations to investigate emergent ecological phenomena
+(1)~scaling to larger populations to investigate emergent ecological phenomena
 and open-ended evolution metrics \citep{bedau_2000_open,
-taylor_2016_openended}; and
+taylor_2016_openended};
+(2)~spatial morphogenesis extending the current developmental program with
+position-dependent cell differentiation; and
 (3)~systematic environmental perturbation studies to characterize adaptive
 capacity across evolutionary timescales.
 
